# charmonium.test-py

./: .gitignore  CONTRIBUTING.md  README.rst  cookiecutter_replay.json  flake.nix  pyproject.toml
charmonium/test_py/: config.py  dask_utils.py  main.py  measure_command_execution.py  trisovic_main.py  trisovic_replication.py  trisovic_reproduction.py  types.py  util.py
charmonium/test_py/analyses/: __init__.py  execute_workflow.py  file_bundle.py  git_commit.py  git_info.py  machine.py  measure_command_execution.py
charmonium/test_py/analyses/workflow_executors/: __init__.py  flake_nix  generic.py  grayson_code_cleaning.py  r_lang.R  r_lang.py  trisovic_code_cleaning.py
charmonium/test_py/analyses/workflows/: types.py  types.tpy
charmonium/test_py/api/: __init__.py  docker_api.py  github_api.py
charmonium/test_py/codes/: __init__.py  dataverse_dataset.py  git_code.py  github_code.py  workflow_code.py
charmonium/test_py/conditions/: __init__.py  trisovic_condition.py  workflow_condition.py
charmonium/test_py/environments/: __init__.py  conda_env.py  setuptools_env.py
charmonium/test_py/projects/: __init__.py  git_project.py  github_project.py
charmonium/test_py/registries/: __init__.py  dataverse.py  dataverse_trisovic_fixed.py  flapy.py  github_user.py  nf_core.py  snakemake_workflow_catalog.py  trisovic_dataverse.py  trisovic_dataverse_fixed.py
dockerfiles/: .gitignore  build.sh  charmonium_test_py_image  clean_iamges.py  nix-store-paths  r-runner-4_0_4_image  r-runners  r-versions.nix  tag.sh  trisovic_runner_image
dockerfiles/charmonium-test-py/: Dockerfile
dockerfiles/jupyter_container/: pyproject.toml
dockerfiles/r-runner/: Dockerfile  entrypoint.sh  exec_r_files.R  execute_files.py  readability_analysis.py
dockerfiles/trisovic-runner/: Dockerfile  README.md  diff  diff.sh  download_dataset.py  exec_r_files.R  execute_files.py  readability_analysis.py  run_analysis.sh  set_environment.py
docs/: docker_in_docker.md  trisovic.md
docs/reports/: flake.nix  result
docs/reports/platform/: main.md
docs/reports/trisovic-replication/: class_diagram.plantuml  main.bib  main.md
docs/reports/trisovic-reproduction/: main.md
scripts/: diff_images.py
stubs/dask/: __init__.pyi
terraform/: .gitignore  deploy.sh  main.tf  manager_vm.tf  nfs.tf  providers.tf  run.sh  ssh_creds.tf  stop.sh  storage.tf  variables.tf  vm_roles.tf  vms.tf  worker_vms.tf
tests/: test_main.py
