[tool.poetry]
name = "charmonium.test-py"
version = "0.1.0"
description = "Test python projects automatically."
authors = ["Samuel Grayson <sam@samgrayson.me>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/charmoniumQ/charmonium.test-py"
packages = [
	{ include = "charmonium" },
]
#keywords = [""]
classifiers = [
	"Operating System :: OS Independent",
	"Typing :: Typed",
	"Natural Language :: English",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers","Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--quiet --numprocesses=0 --doctest-modules --doctest-glob='*.rst'"

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.coverage.html]
directory = "build/htmlcov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self\.debug',
    'raise AssertionError',
    'raise NotImplementedError',
    'if False:',
    'if __name__ == .__main__.:',
	'if TYPE_CHECKING',
    '@(abc\.)?abstractmethod',
    '\w*\.\.\.$',
    '\w*pass$',
]

# [tool.pylint]
# Too long for inclusion here
# see pylintrc

[tool.mypy]
strict = true
pretty = true
error_summary = true
color_output = true
namespace_packages = true
#mypy_path = stubs

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.bump2version]
current_version = "0.1.0"
commit = true
tag = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,38,39,310}
# Make sure to install the Python versions listed here in the Nix flake.
isolated_build = True

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install
    pytest --exitfirst
"""

[tool.poetry.dependencies]
python = "^3.8"
# make sure to keep the Python versions here consistent with those tested by Tox (tool.tox.legacy_tox_ini.tox.envlist).
tqdm = "^4.64.1"
dask = "^2023.3.2"
charmonium-cache = "^1.3"
docker = "^6.0.1"
xxhash = "^3.2.0"
charmonium-time-block = "^0.3.2"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
psutil = "^5.9.4"
pygithub = "^1.58.1"
gitpython = "^3.1.29"
universal-pathlib = "^0.0.23"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.0"
black = "^23.0"
pylint = "^2.11.1"
mypy = "^1.1.1"
pytest = "^7.0"
types-requests = "^2.28.11.5"
types-psutil = "^5.9.5.9"
types-tqdm = "^4.65.0.1"
typing-extensions = "^4.5.0"

[tool.poetry.group.site.dependencies]
azure-identity = "^1.12.0"
azure-storage-blob = "^12.15.0"
distributed = "^2023.3.2"
# Note that dask[distributed] is recursive.
# dask[distributed] -> distributed -> dask.
# Poetry2nix can't handle that.
bokeh = ">= 2.4.2, <3"
adlfs = "^2023.1.0"
ipython = "^8.6.0"
cryptography = "40.0.1"
jupyter-server-proxy = "^3.2.2"
